[tool.poetry]
name = "binance-bot"
version = "0.1.0"
description = ""
authors = ["Oleksandr Shuryhin <shuryhin.oleksandr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
